challenge síða vol2

--- a/src/main/resources/templates/ChallengePage.html
+++ b/src/main/resources/templates/ChallengePage.html
@@ -4,9 +4,13 @@
     <meta charset="UTF-8">
     <title>Challenges</title>
 
-    <link rel="stylesheet" href="./static/challenges.css">
+    <link rel="stylesheet" href="../static/challenges.css">
 </head>
 <body>
-    <p>Sælir</p>
+    <div class="navbar">
+        <div class="title">
+            <p>Gaia bby</p>
+        </div>
+    </div>
 </body>
 </html>
