--- a/src/main/resources/templates/Index.html
+++ b/src/main/resources/templates/Index.html
@@ -36,6 +36,9 @@
                 <li class="nav-item">
                     <a class="nav-link js-scroll-trigger" href="#contact">Hafa Samband</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link js-scroll-trigger" href="/challenges">Skoða Áskoranir</a>
+                </li>
             </ul>
         </div>
     </div>
