--- a/src/main/resources/templates/Index.html
+++ b/src/main/resources/templates/Index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.springframework.org/schema/jdbc">
 
 <head>
     <meta charset="UTF-8">
@@ -14,7 +14,7 @@
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link th:href="@{/css/index.css}" href="../static/css/index.css" rel="stylesheet" type="text/css" media="screen" />
+    <link th:href="@{index.css}" href="../static/index.css" rel="stylesheet" type="text/css" media="screen" />
 </head>
 <body id="page-top">
 
@@ -108,7 +108,7 @@
 -->
 
 <!-- Custom JavaScript for this theme -->
-<script src="../js/index.js"></script>
+<script th:src="@{../js/index.js}"></script>
 
 
 </body>
