--- a/src/main/resources/templates/Index.html
+++ b/src/main/resources/templates/Index.html
@@ -14,7 +14,7 @@
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link th:href="@{/css/index.css}" href="../static/css/index.css" rel="stylesheet" type="text/css" media="screen" />
+    <link th:href="@{index.css}" href="../static/index.css" rel="stylesheet" type="text/css" media="screen" />
 </head>
 <body id="page-top">
 
