--- a/src/main/resources/templates/Index.html
+++ b/src/main/resources/templates/Index.html
@@ -78,6 +78,12 @@
                     Við viljum fræða, hjálpa og kæta alla þá sem vilja taka skrefið.</p>
             </div>
         </div>
+        <div class="mx-auto" style="width: 200px;">
+            <a href="#loginModal" role="button" class="btn btn-outline-primary" data-target="modal">Skrá inn!</a>
+        </div>
+
+
+
     </div>
 </section>
 
