--- a/src/main/resources/static/challenges.css
+++ b/src/main/resources/static/challenges.css
@@ -1,7 +1,11 @@
-.head {
-    color: blue
+/*!
+ * Start Bootstrap - Scrolling Nav (https://startbootstrap.com/template-overviews/scrolling-nav)
+ * Copyright 2013-2019 Start Bootstrap
+ * Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap-scrolling-nav/blob/master/LICENSE)
+ */
+
+section {
+    margin-top: 25px;
+    padding: 50px 0;
 }
 
-div {
-    color: red
-}
