--- a/src/main/resources/templates/ChallengePage.html
+++ b/src/main/resources/templates/ChallengePage.html
@@ -1,16 +1,57 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.springframework.org/schema/data/jaxb">
 <head>
     <meta charset="UTF-8">
     <title>Challenges</title>
 
-    <link rel="stylesheet" href="../static/challenges.css">
+    <!-- Bootstrap core CSS-->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <!-- <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet"> -->
+
+    <!-- Custom styles for this template -->
+    <link th:href="@{challenges.css}" href="../static/challenges.css" rel="stylesheet" type="text/css" media="screen" />
+
 </head>
-<body>
-    <div class="navbar">
-        <div class="title">
-            <p>Gaia bby</p>
+<body id="page-top">
+
+<!-- Navigation -->
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top" id="mainNav">
+    <div class="container">
+        <a class="navbar-brand js-scroll-trigger" href="#page-top">GAIA</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarResponsive">
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item">
+                    <a class="nav-link js-scroll-trigger" href="#about">Um Gaia</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link js-scroll-trigger" href="#services">Markmið</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link js-scroll-trigger" href="#contact">Hafa Samband</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link js-scroll-trigger" href="/challenges">Skoða Áskoranir</a>
+                </li>
+            </ul>
         </div>
     </div>
+</nav>
+
+<section id="contact">
+    <div class="container">
+        <div class="card" style="width: 18rem;">
+        <img src="https://www.freeiconspng.com/uploads/no-image-icon-11.PNG" class="card-img-top">
+            <div class="card-body">
+                <h5 class="card-title">Áskorun #1</h5>
+                <p class="card-text">Ekki keyra bíl í 2 vikur</p>
+                <a href="#" class="btn btn-primary">Þoriru?</a>
+            </div>
+        </div>
+    </div>
+</section>
+
 </body>
 </html>
