Signup og notendaskilmálar

--- a/src/main/resources/templates/Index.html
+++ b/src/main/resources/templates/Index.html
@@ -39,6 +39,9 @@
                 <li class="nav-item">
                     <a class="nav-link js-scroll-trigger" href="/challenges">Skoða Áskoranir</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link js-scroll-trigger" href="/signup">Búa til aðgang</a>
+                </li>
             </ul>
         </div>
     </div>
