--- a/src/main/resources/templates/Skilmalar.html
+++ b/src/main/resources/templates/Skilmalar.html
@@ -2,14 +2,15 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Búa til aðgang</title>
+    <title>Notendaskilmálar</title>
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
-    <link th:href="@{signup.css}" href="../static/signup.css" rel="stylesheet" type="text/css" media="screen" />
+    <link th:href="@{skilmalar.css}" href="../static/skilmalar.css" rel="stylesheet" type="text/css" media="screen" />
 </head>
 <body>
+
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top" id="mainNav">
     <div class="container">
@@ -46,30 +47,23 @@
     </div>
 </header>
 
-
-<form  method="Post" type="hidden" style="border:1px solid #ccc">
-    <div class="container">
-        <h1 class="no_effect">Búa til aðgang</h1>
-        <p>Vinsamlegast fyllið inn formið.</p>
-        <hr>
-
-        <label for="email"><b>Tölvupóstfang</b></label>
-        <input type="text" placeholder="Jon@vefsida.is" name="email" required>
-
-        <label for="psw"><b>Lykilorð</b></label>
-        <input type="password" placeholder="Lykilorð" name="psw" required>
-
-        <label for="psw-repeat"><b>Endurtekið lykilorð</b></label>
-        <input type="password" placeholder="Endurtekið lykilorð" name="psw-repeat" required>
-
-        <p>Með því að gera aðgang samþykkir þú  <a href="/skilmalar" style="color:dodgerblue">Notendaskilmála okkar</a>.</p>
-
-        <div class="clearfix">
-            <button type="submit" class="signupbtn">Búa til aðgang</button>
-        </div>
-    </div>
-</form>
-
+<ol>
+    <li>
+        <p>Allar tölur á síðunni eru gróft viðmið og ekki er hægt að ábyrgjast þær séu réttar að öllu leiti en veita viðmið meðan við meðaltal eftirfaldra lífstíla</p>
+    </li>
+    <li>
+        <p>Upplýsingar sem eru veittar á síðunni má GAIA nota til úrvinnslu á gögnum, svo betur sé hægt að skilja neyslu þeirra einstaklinga sem setja hér inn upplýsingar</p>
+    </li>
+    <li>
+        <p>Með að búa til aðgang samþykkir þú að GAIA hafi leyfi til gefa þér ráðleggingar um kaup á vörum útfrá þeim upplýsingum sem notandi hefur veitt.</p>
+    </li>
+    <li>
+        <p>Þú leyfir GAIA að sýna þér auglýsingar inná þínum persónulega aðgangi</p>
+    </li>
+    <li>
+        <p>Ef þú ert komin í þessa línu hefur þú lesið meira af skilmálum en meðalmaðurinn, klapp fyrir þér.</p>
+    </li>
+</ol>
 
 <!-- Footer -->
 <footer class="py-5 bg-dark">
@@ -78,6 +72,9 @@
     </div>
     <!-- /.container -->
 </footer>
+
+</body>
+</html>
 
 </body>
 </html>
