--- a/src/main/resources/templates/LoginPage.html
+++ b/src/main/resources/templates/LoginPage.html
@@ -1,10 +1,16 @@
+
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="https://thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Login</title>
 </head>
 <body>
-    <p>Her er Login Sida</p>
+<h2>Login to your account</h2>
+<form action="#" th:action="@{/login}" th:object="${user}"  method="post">
+    <input type="text" name="username" id="username" th:field="*{userName}"/>
+    <input type="text" name="password" id="password" th:value="*{password}"/>
+    <input type="submit" value="Login"/>
+</form>
 </body>
 </html>
