--- a/src/main/resources/templates/SignUp.html
+++ b/src/main/resources/templates/SignUp.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
     <title>Búa til aðgang</title>
@@ -13,21 +13,12 @@
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top" id="mainNav">
     <div class="container">
-        <a class="navbar-brand js-scroll-trigger" href="#page-top">GAIA</a>
+        <a class="navbar-brand js-scroll-trigger" href="/">GAIA</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav ml-auto">
-                <li class="nav-item">
-                    <a class="nav-link js-scroll-trigger" href="/#about">Um Gaia</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link js-scroll-trigger" href="/#services">Markmið</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link js-scroll-trigger" href="/#contact">Hafa Samband</a>
-                </li>
                 <li class="nav-item">
                     <a class="nav-link js-scroll-trigger" href="/challenges">Skoða Áskoranir</a>
                 </li>
@@ -47,21 +38,25 @@
 </header>
 
 
-<form  method="Post" type="hidden" style="border:1px solid #ccc">
+<form  action="#" th:action="@{/SignUp}" th:object="${user}"  method="Post" type="hidden" style="border:1px solid #ccc">
     <div class="container">
         <h1 class="no_effect">Búa til aðgang</h1>
         <p>Vinsamlegast fyllið inn formið.</p>
         <hr>
 
+        <label for="userName"><b>Notendanafn</b></label>
+        <input type="text" placeholder="Jon" name="userName" th:field="${user.userName}" required>
+
         <label for="email"><b>Tölvupóstfang</b></label>
-        <input type="text" placeholder="Jon@vefsida.is" name="email" required>
+        <input type="text" placeholder="Jon@vefsida.is" name="email" th:field="${user.email}" required>
 
         <label for="psw"><b>Lykilorð</b></label>
-        <input type="password" placeholder="Lykilorð" name="psw" required>
+        <input type="password" placeholder="Lykilorð" name="psw" th:field="${user.password}" required>
 
+        <!--
         <label for="psw-repeat"><b>Endurtekið lykilorð</b></label>
         <input type="password" placeholder="Endurtekið lykilorð" name="psw-repeat" required>
-
+        -->
         <p>Með því að gera aðgang samþykkir þú  <a href="/skilmalar" style="color:dodgerblue">Notendaskilmála okkar</a>.</p>
 
         <div class="clearfix">
