--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -6,9 +6,9 @@
 </head>
 <body>
 <h2>Login to your account</h2>
-<form action="#" th:action="@{/login}" th:object="${user}"  method="post">
-    <input type="text" name="username" id="username" th:field="*{uName}"/>
-    <input type="text" name="password" id="password" th:value="*{password}"/>
+<form action="#" th:action="@{/login}"  th:object="${user}" method="post">
+    <input type="text" name="username" id="username" th:text="${user.userName}"/>
+    <input type="text" name="password" id="password" th:text="${user.password}"/>
     <input type="submit" value="Login"/>
 </form>
 </body>
