--- a/src/main/resources/templates/users.html
+++ b/src/main/resources/templates/users.html
@@ -20,8 +20,8 @@
     <tr th:each="user : ${users}">
         <td th:text="${user.id}">Id</td>
         <td th:text="${user.userName}">Name</td>
-        <td th:text="${user.email}">Name</td>
-        <td th:text="${user.originalIndex}">Name</td>
+        <td th:text="${user.email}">Email</td>
+        <td th:text="${user.originalIndex}">Original Index</td>
 
     </tr>
 </table>
