--- a/src/main/resources/templates/loggedInUser.html
+++ b/src/main/resources/templates/loggedInUser.html
@@ -5,7 +5,7 @@
     <title>Logged In User</title>
 </head>
 <body>
-<p th:text="${loggedinuser.userName}"></p>
+<p th:text="${loggedInUser}"></p>
 
 </body>
 </html>
