Lagað að birta challenge page

--- a/src/main/resources/templates/challenges.html
+++ b/src/main/resources/templates/challenges.html
@@ -19,7 +19,7 @@
     <tr th:each="challenge : ${challenges}">
         <td th:text="${challenge.id}">Id</td>
         <td th:text="${challenge.title}">Title</td>
-        <td th:text="${challenge.info}">Description</td>
+        <td th:text="${challenge.description}">Description</td>
         <td th:text="${challenge.carbonIndex}">Carbon Index</td>
 
     </tr>
