--- a/src/main/resources/templates/challenges.html
+++ b/src/main/resources/templates/challenges.html
@@ -2,13 +2,60 @@
 <html xmlns:th="https://thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Challenges</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="">
+    <meta name="author" content="">
+
+    <title>GAIA</title>
+
+    <!-- Bootstrap core CSS-->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- Custom styles for this template -->
+    <link th:href="@{index.css}" href="../static/index.css" rel="stylesheet" type="text/css" media="screen" />
 </head>
-<body>
+<body id="page-top">
+
+<!-- Navigation -->
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top" id="mainNav">
+    <div class="container">
+        <a class="navbar-brand js-scroll-trigger" href="#page-top">GAIA</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarResponsive">
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item">
+                    <a class="nav-link js-scroll-trigger" href="#about">Um Gaia</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link js-scroll-trigger" href="#services">Markmið</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link js-scroll-trigger" href="#contact">Hafa Samband</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link js-scroll-trigger" href="/challenges">Skoða Áskoranir</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link js-scroll-trigger" href="/signup">Búa til aðgang</a>
+                </li>
+            </ul>
+        </div>
+    </div>
+</nav>
+
+<header class="bg-primary text-white">
+    <div class="container text-center">
+        <h1>GAIA</h1>
+        <p class="lead">Staðurinn þar sem þú getur leyst öll vandamál heimsins!</p>
+    </div>
+</header>
 
 <h2>List of Challenges</h2>
 
-<table>
+<!--<table>
     <tr>
         <th>Id</th>
         <th>Title</th>
@@ -23,7 +70,22 @@
         <td th:text="${challenge.carbonIndex}">Carbon Index</td>
 
     </tr>
-</table>
+</table> !-->
+
+<section id="contact">
+    <div class="container">
+        <div th:each="challenge : ${challenges}">
+        <div class="card" style="width: 18rem;">
+            <img src="https://thumbs.dreamstime.com/t/go-green-grass-inscription-computer-monitor-concept-ecoenvironment-friendly-computer-eco-environment-vector-illustration-75614936.jpg" class="card-img-top">
+            <div class="card-body">
+                <h5 class="card-title" th:text="${challenge.title}"></h5>
+                <p class="card-text" th:text="${challenge.description}"></p>
+                <a href="#" class="btn btn-primary">Þoriru?</a>
+            </div>
+        </div>
+        </div>
+    </div>
+</section>
 
 
 </body>
