--- a/src/main/resources/templates/users.html
+++ b/src/main/resources/templates/users.html
@@ -14,6 +14,7 @@
         <th>Id</th>
         <th>Name</th>
         <th>Email</th>
+        <th>User Info</th>
         <th>Original Index</th>
     </tr>
 
@@ -21,6 +22,7 @@
         <td th:text="${user.id}">Id</td>
         <td th:text="${user.userName}">Name</td>
         <td th:text="${user.email}">Email</td>
+        <td th:text="${user.userInfo}">Info</td>
         <td th:text="${user.originalIndex}">Original Index</td>
 
     </tr>
