--- a/src/main/resources/templates/SignUp.html
+++ b/src/main/resources/templates/SignUp.html
@@ -56,7 +56,7 @@
         <hr>
 
         <label th:for="userInfo_drive"><b>Hversu oft keyriru í vinnuna?</b></label>
-        <select th:field="*{percentage}">
+        <select th:field="*{user}">
             <option th:each="i : ${#numbers.sequence(0, 5)}" th:value="${i}" th:text="${i}">
             </option>
         </select>
