--- a/src/main/resources/templates/challenges.html
+++ b/src/main/resources/templates/challenges.html
@@ -68,7 +68,7 @@
                         <div class="frontside">
                             <div class="card">
                                 <div class="card-body text-center">
-                                    <p><img class=" img-fluid" src="https://sunlimetech.com/portfolio/boot4menu/assets/imgs/team/img_01.png" alt="card image"></p>
+                                    <p><img class=" img-fluid" src="https://images.glaciermedia.ca/polopoly_fs/1.2271675.1465244454!/fileImage/httpImage/image.jpg_gen/derivatives/landscape_804/tree-seedling.jpg" alt="card image"></p>
                                     <h4 class="card-title" th:text="${challenge.title}"></h4>
                                 </div>
                             </div>
