Hér kemur rétt route

--- a/src/main/resources/templates/challenges.html
+++ b/src/main/resources/templates/challenges.html
@@ -30,13 +30,13 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                    <a class="nav-link js-scroll-trigger" href="#about">Um Gaia</a>
+                    <a class="nav-link js-scroll-trigger" href="/#about">Um Gaia</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link js-scroll-trigger" href="#services">Markmið</a>
+                    <a class="nav-link js-scroll-trigger" href="/#services">Markmið</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link js-scroll-trigger" href="#contact">Hafa Samband</a>
+                    <a class="nav-link js-scroll-trigger" href="/#contact">Hafa Samband</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link js-scroll-trigger" href="/challenges">Skoða Áskoranir</a>
