--- a/src/main/resources/static/challenges.css
+++ b/src/main/resources/static/challenges.css
@@ -56,7 +56,7 @@ section {
 
 section .section-title {
     text-align: center;
-    color: #007b5e;
+    color: Black;
     margin-bottom: 50px;
     text-transform: uppercase;
 }
