--- a/src/main/resources/templates/Index.html
+++ b/src/main/resources/templates/Index.html
@@ -31,16 +31,13 @@
                     <a class="nav-link js-scroll-trigger" href="#about">Um Gaia</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link js-scroll-trigger" href="#services">Markmið</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link js-scroll-trigger" href="#contact">Hafa Samband</a>
-                </li>
-                <li class="nav-item">
                     <a class="nav-link js-scroll-trigger" href="/challenges">Skoða Áskoranir</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link js-scroll-trigger" href="/signup">Búa til aðgang</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link js-scroll-trigger" href="/login">Innskrá</a>
                 </li>
             </ul>
         </div>
@@ -81,11 +78,6 @@
                     Við viljum fræða, hjálpa og kæta alla þá sem vilja taka skrefið.</p>
             </div>
         </div>
-        <div class="mx-auto" style="width: 200px;">
-            <a href="#loginModal" role="button" class="btn btn-outline-primary" data-target="modal">Skrá inn!</a>
-        </div>
-
-
 
     </div>
 </section>
