--- a/src/main/resources/templates/challenges.html
+++ b/src/main/resources/templates/challenges.html
@@ -57,7 +57,7 @@
 </header>
 
 <section id="team" class="pb-5">
-    <h5 class="section-title h1">CHALLENGES</h5>
+    <h5 class="section-title h1">Áskoranir</h5>
     <div class="container">
         <div class="row">
             <div th:each="challenge : ${challenges}">
