--- a/src/main/resources/templates/users.html
+++ b/src/main/resources/templates/users.html
@@ -16,6 +16,7 @@
         <th>Email</th>
         <th>User Info</th>
         <th>Original Index</th>
+        <th>Gender</th>
     </tr>
 
     <tr th:each="user : ${users}">
@@ -24,6 +25,7 @@
         <td th:text="${user.email}">Email</td>
         <td th:text="${user.userInfo}">Info</td>
         <td th:text="${user.originalIndex}">Original Index</td>
+        <td th:text="${user.gender}">Gender</td>
 
     </tr>
 </table>
