--- a/src/main/resources/templates/challenges.html
+++ b/src/main/resources/templates/challenges.html
@@ -69,7 +69,9 @@
                                 <div class="card-body text-center mt-4">
                                     <h4 class="card-title" th:text="${challenge.title}"></h4>
                                     <p class="accept">Taka við áskorun</p>
+                                    <form action="#" th:action="@{/addChallengeToUser}"  th:object="${user}" method="post">
                                     <a th:href="@{/addChallenge/{id}(id=${challenge.id})}" class="btn btn-primary btn-sm"><i class="fa fa-plus"></i></a>
+                                    </form>
                                     <p class="card-text" th:text="${challenge.description}"></p>
                                 </div>
                             </div>
