--- a/src/main/resources/templates/loggedInUser.html
+++ b/src/main/resources/templates/loggedInUser.html
@@ -2,7 +2,7 @@
 <html xmlns:th="https://thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Búa til aðgang</title>
+    <title>GAIA</title>
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -37,8 +37,55 @@
     </div>
 </header>
 
-
 <p th:text="${loggedInUser}"></p>
+
+
+<div class="container">
+    <div class="row">
+        <div class="panel panel-default">
+            <div class="panel-heading">  <h4 >User Profile</h4></div>
+            <div class="panel-body">
+                <div class="col-md-4 col-xs-12 col-sm-6 col-lg-4">
+                    <!--
+                    <img alt="User Pic" src="https://x1.xingassets.com/assets/frontend_minified/img/users/nobody_m.original.jpg" id="profile-image1" class="img-circle img-responsive">
+                    -->
+                </div>
+
+            </div>
+            <div class="col-md-8 col-xs-12 col-sm-6 col-lg-8" >
+                <div class="container" >
+                    <h2>John Doe</h2>
+                    <p>an   <b> Employee</b></p>
+
+
+                </div>
+                <hr>
+                <div class="container details" >
+                    <i class="fas fa-user"></i><span style="width:50px;" th:text="${loggedInUser}"></span></li>
+
+                    <p><span class="glyphicon glyphicon-envelope one" style="width:50px;"></span>somerandom@email.com</p></li>
+                </div>
+                <hr>
+                <div class="col-sm-5 col-xs-6 tital " >Date Of Joining: 15 Jun 2016</div>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+
+
+
+</div>
+
+
+
+
+
+
+
+
+
 
 
 
