--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -47,12 +47,52 @@
 </header>
 
 <section>
-    <h2>Innskráning</h2>
-        <form action="#" th:action="@{/login}"  th:object="${user}" method="post">
-            <input type="text" placeholder="Notendanafn" name="username" id="username" th:field="${user.userName}"/>
-            <input type="text" placeholder="Lykilorð" name="password" id="password" th:field="${user.password}"/>
-            <input type="submit" value="Skrá inn"/>
-        </form>
+    <div class="row">
+        <div class="col-md-9 col-md-offset-3">
+            <h2>Innskráning</h2>
+            <form action="#" th:action="@{/login}"  th:object="${user}" method="post">
+                <!-- Log in Field -->
+                <div class="form-group">
+                    <label for="username">Notendanafn</label>:
+                    <input type="text"
+                           id="username"
+                           name="username"
+                           class="form-control"
+                           autofocus="autofocus"
+                           placeholder="Notendanafn"
+                           th:field="${user.userName}"
+                    >
+                    <label th:if="${#fields.hasErrors('userName')}" th:errors="*{user.userName}">Villa í notendanafni</label>
+
+                </div>
+                <div class="form-group">
+                    <label for="password">Lykilorð</label>:
+                    <input type="password"
+                           id="password"
+                           name="password"
+                           class="form-control"
+                           placeholder="Lykilorð"
+                           th:field="${user.password}"
+                    >
+                    <label th:if="${#fields.hasErrors('password')}" th:errors="*{user.password}">Villa í lykilorði</label>
+
+
+                </div>
+                <!-- Submit button -->
+                <div class="form-group">
+                    <div class="row">
+                        <div class="col-md-9 ">
+                            <input type="submit"
+                                   name="login-submit"
+                                   id="login-submit"
+                                   class="form-control btn btn-info"
+                                   value="Skrá inn">
+                        </div>
+                    </div>
+                </div>
+            </form>
+        </div>
+    </div>
 </section>
 </body>
 
