--- a/src/main/resources/templates/loggedInUser.html
+++ b/src/main/resources/templates/loggedInUser.html
@@ -8,6 +8,10 @@
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
     <link th:href="@{signup.css}" href="../static/signup.css" rel="stylesheet" type="text/css" media="screen" />
+
+    <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+    <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 </head>
 <body>
 
@@ -37,8 +41,6 @@
     </div>
 </header>
 
-<p th:text="${loggedInUser}"></p>
-
 
 <div class="container">
     <div class="row">
@@ -46,27 +48,41 @@
             <div class="panel-heading">  <h4 >User Profile</h4></div>
             <div class="panel-body">
                 <div class="col-md-4 col-xs-12 col-sm-6 col-lg-4">
-                    <!--
-                    <img alt="User Pic" src="https://x1.xingassets.com/assets/frontend_minified/img/users/nobody_m.original.jpg" id="profile-image1" class="img-circle img-responsive">
-                    -->
+
+                    <img  class="img-circle img-responsive" alt="User Pic" src="https://x1.xingassets.com/assets/frontend_minified/img/users/nobody_m.original.jpg" id="profile-image1">
+
                 </div>
 
             </div>
             <div class="col-md-8 col-xs-12 col-sm-6 col-lg-8" >
                 <div class="container" >
-                    <h2>John Doe</h2>
-                    <p>an   <b> Employee</b></p>
+                    <h2 th:text="${user.userName}"></h2>
+
 
 
                 </div>
                 <hr>
                 <div class="container details" >
-                    <i class="fas fa-user"></i><span style="width:50px;" th:text="${loggedInUser}"></span></li>
+                    <i class="fa fa-user"></i><span th:text="${user.email}"></span><br>
+                    <i class="fa fa-plus"></i><span th:text="${user.userInfo}"></span><br>
+                    <i class="fa fa-user"></i><h6 th:text="${user.originalIndex}"></h6><br>
+                    <i class="fa fa-user"></i><h5 th:text="${user.currIndex}"></h5><br>
 
-                    <p><span class="glyphicon glyphicon-envelope one" style="width:50px;"></span>somerandom@email.com</p></li>
+
                 </div>
                 <hr>
-                <div class="col-sm-5 col-xs-6 tital " >Date Of Joining: 15 Jun 2016</div>
+                <div class="col-sm-5 col-xs-6 tital ">
+                    <span>Áskorarnir mínar!</span>
+
+                    <!--
+                    <tr th:each="challenge : ${challenges}">
+
+                        <td th:text="${challenge.title}">Name</td>
+
+                    </tr>
+                    -->
+
+                </div>
             </div>
         </div>
     </div>
