Kall til allra umhverfisperra alheimsins, skráið ykkur nú

--- a/src/main/resources/templates/SignUp.html
+++ b/src/main/resources/templates/SignUp.html
@@ -63,6 +63,25 @@
             <option th:value="2500" >HMS Queen Mary</option>
         </select>
 
+        <select th:field="${user.foodIndex}">
+            <option th:value="0" >Vegan</option>
+            <option th:value="5" >Pescitarian</option>
+            <option th:value="8" >Grænmetisæta</option>
+            <option th:value="12" >Almennt fæði</option>
+            <option th:value="15" >Ketó</option>
+            <option th:value="2500" >Carnivore</option>
+        </select>
+
+        <select th:field="${user.houseIndex}">
+            <option th:value="0" >Hitaveita</option>
+            <option th:value="5" >Rafmagn</option>
+        </select>
+
+        <select th:field="${user.consIndex}">
+            <option th:value="0" >undir 100.000 á mánuði</option>
+            <option th:value="5" >yfir miljón</option>
+        </select>
+
         <p>Með því að gera aðgang samþykkir þú  <a href="/skilmalar" style="color:dodgerblue">Notendaskilmála okkar</a>.</p>
 
         <div class="clearfix">
