--- a/src/main/resources/templates/users.html
+++ b/src/main/resources/templates/users.html
@@ -77,6 +77,7 @@
         <td th:text="${user.originalIndex}">Original Index</td>
         <td th:text="${user.userInfo}">Info</td>
         <td th:text="${user.transIndex}">trans Index</td>
+        <td th:text="${user.consIndex}">consIndex</td>
     </tr>
 </table>
 </div>
