back takki á error síðu

--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -9,7 +9,7 @@
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link th:href="@{users.css}" href="../static/users.css" rel="stylesheet" type="text/css" media="screen" />
+    <link th:href="@{error.css}" href="../static/error.css" rel="stylesheet" type="text/css" media="screen" />
 
 </head>
 <body>
@@ -49,6 +49,8 @@
 <div class="secondBody">
     <h1>óó nei!</h1>
     <h1>Hvernig lentir þú hér?</h1>
+
+    <input type="button" value="Go back!" onclick="history.back()">
 
 </div>
 
