--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -61,7 +61,7 @@
                            autofocus="autofocus"
                            placeholder="Notendanafn"
                            th:field="${user.userName}"
-                    >
+                    ><i class="fa fa-user"></i>
                     <label th:if="${#fields.hasErrors('userName')}" th:errors="*{user.userName}">Villa í notendanafni</label>
 
                 </div>
