--- a/src/main/resources/templates/users.html
+++ b/src/main/resources/templates/users.html
@@ -28,7 +28,7 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                    <a class="nav-link js-scroll-trigger" href="#about">Um Gaia</a>
+                    <a class="nav-link js-scroll-trigger" href="./#about">Um Gaia</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link js-scroll-trigger" href="/challenges">Skoða Áskoranir</a>
@@ -53,12 +53,12 @@
 
 <div class="secondBody">
 <h2>Search for user</h2>
-<!--
+
     <form action="#" th:action="@{/users}" th:object="${users}" method="post">
-        <input type="text" th:field="${user.useName}">
-        <p th:if="${#fields.hasErrors('${userName}')}" th:errors="*{userName}">Error?</p>
+        <input type="text" th:field="${userName}">
+        <!-- <p th:if="${#fields.hasErrors('${userName}')}" th:errors="*{userName}">Error?</p> -->
         <input type="submit" value="Search">
-    </form>-->
+    </form>
 
 <table class="displayTable">
     <tr id="topTable">
