--- a/src/main/resources/templates/Skilmalar.html
+++ b/src/main/resources/templates/Skilmalar.html
@@ -21,19 +21,13 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                    <a class="nav-link js-scroll-trigger" href="/#about">Um Gaia</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link js-scroll-trigger" href="/#services">Markmið</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link js-scroll-trigger" href="/#contact">Hafa Samband</a>
-                </li>
-                <li class="nav-item">
                     <a class="nav-link js-scroll-trigger" href="/challenges">Skoða Áskoranir</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link js-scroll-trigger" href="/signup">Búa til aðgang</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link js-scroll-trigger" href="/login">Skrá inn</a>
                 </li>
             </ul>
         </div>
@@ -47,6 +41,7 @@
     </div>
 </header>
 
+<h2>Skilmálar GAIA</h2>
 <ol>
     <li>
         <p>Allar tölur á síðunni eru gróft viðmið og ekki er hægt að ábyrgjast þær séu réttar að öllu leiti en veita viðmið meðan við meðaltal eftirfaldra lífstíla</p>
