--- a/src/main/resources/static/signup.css
+++ b/src/main/resources/static/signup.css
@@ -35,7 +35,7 @@ h1 {
 
 * {box-sizing: border-box}
 
-/* Full-width input fields */
+
 input[type=text], input[type=password] {
     width: 100%;
     padding: 15px;
@@ -55,7 +55,7 @@ hr {
     margin-bottom: 25px;
 }
 
-/* Set a style for all buttons */
+
 button {
     background-color: #4CAF50;
     color: white;
@@ -71,31 +71,53 @@ button:hover {
     opacity:1;
 }
 
-/* Extra styles for the cancel button */
+
 .cancelbtn {
     padding: 14px 20px;
     background-color: #f44336;
 }
 
-/* Float cancel and signup buttons and add an equal width */
+
 .cancelbtn, .signupbtn {
     float: left;
     width: 50%;
 }
 
-/* Add padding to container elements */
+.turndownforwhat {
+    display: flex;
+    flex-wrap: nowrap;
+    flex-direction: column;
+    max-inline-size: 320px;
+}
+
+select {
+    border: none;
+    background: #f1f1f1;
+}
+
+.labelit {
+    padding-top: 16px;
+    padding-bottom: 16px;
+    font-weight: bold;
+}
+
+.skilmali {
+    padding-top: 16px;
+    padding-bottom: 16px;
+}
+
 .container {
     padding: 16px;
 }
 
-/* Clear floats */
+
 .clearfix::after {
     content: "";
     clear: both;
     display: table;
 }
 
-/* Change styles for cancel button and signup button on extra small screens */
+
 @media screen and (max-width: 300px) {
     .cancelbtn, .signupbtn {
         width: 100%;
